--- a/tenement-service/pom.xml
+++ b/tenement-service/pom.xml
@@ -7,6 +7,7 @@
         <groupId>com.tenement</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+    <packaging>war</packaging>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>tenement-service</artifactId>
