--- a/tenement-api/pom.xml
+++ b/tenement-api/pom.xml
@@ -16,6 +16,11 @@
             <artifactId>tenement-service</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
