--- a/tenement-api/src/main/resources/application.properties
+++ b/tenement-api/src/main/resources/application.properties
@@ -18,3 +18,8 @@ spring.servlet.multipart.max-request-size=100MB
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
 
+spring.redis.port=6379
+spring.redis.host=127.0.0.1
+spring.redis.database=0 
+spring.redis.jedis.pool.max-active=50
+spring.redis.jedis.pool.max-wait=3000
